# chromashell

./: .gitignore  CMakeLists.txt  Makefile  README.md  chromashell.c  chromashell.h  cmake_uninstall.cmake.in  color.c  errmsg.c  presets.c  presets.h  segment.h  shell.c  shell.h  streq.h
doc/: I18n.md  Presets.md
src/: chromashell.c  color.c  color.h  config.h  config.h.in  errmsg.c  errmsg.h  i18n.h  options.h  presets.c  presets.h  presets.json  segment.h  shell.c  shell.h  typecheck.c  typecheck.h  vstrcmp.c  vstrcmp.h
